# hank

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  python-ci.yml  release.yml  sync-main-to-dev.yml  test-publish.yml
hank/: __init__.py  dog.py
tests/: test_hank.py
