[project]
name = "hank"
version = "0.1.3"
description = "A fun little package inspired by a very good dog named Hank."
authors = [{ name = "Daron Prater", email = "praterdaron513@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pytest",
    "pre-commit",
    "bump2version"
]

[project.optional-dependencies]
dev = ["build", "twine"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
