[project]
name = "hank"
version = "0.1.6"
description = "A fun little package inspired by a very good dog named Hank."
authors = [{ name = "Daron Prater", email = "praterdaron513@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "bump2version",
    "build",
    "twine",
    "black",
    "flake8",
    "mypy",
    "pandas-stubs",
    "python-semantic-release"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.semantic_release]
version_variable = [
  "hank/__init__.py:__version__"
]
upload_to_pypi = true
build_command = "python -m build"
branch = "main"
changelog_file = "CHANGELOG.md"
commit_parser = "angular"  # Conventional commits style
